# tmp-dev-app

./: docker-compose.yml
app/: Dockerfile  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs
app/src/: App.tsx  main.tsx
app/src/components/: Card.tsx  Layout.tsx
app/src/context/: TeamMemberContext.tsx
app/src/pages/: AddPage.tsx  EditPage.tsx  ListPage.tsx
app/src/services/: api.ts
app/src/styles/: theme.ts
app/src/types/: index.ts
server/: Dockerfile  README.md  alembic.ini  database.py  init-db.sql  main.py  pyproject.toml  start.sh  wait-for-db.sh
server/alembic/: env.py
server/alembic/versions/: a6c182fec1cc_initial_migration.py
server/server/: models.py  schemas.py
